--- a/src/sass/sougi.scss
+++ b/src/sass/sougi.scss
@@ -19,20 +19,22 @@ section {
                 float: left;
                 font-size: 17px;
 
-                :first-child::before {
+                &:first-child::before {
                     display: none;
 
                     //     padding: 0 3px 0 0;
                     // content: ">";
                     // font-family: FontAwesome;
                     // font-size: 14px;
-                    ::before {
-                        padding: 0 10px 0 0;
-                        content: ">";
-                        font-family: FontAwesome;
-                        // font-size: 14px;
-                    }
                 }
+
+                &::before {
+                    padding: 0 10px 0 0;
+                    content: ">";
+                    font-family: FontAwesome;
+                    // font-size: 14px;
+                }
+
             }
         }
     }
@@ -460,6 +462,8 @@ section {
             }
         }
 
+
+
         .content {
             flex: 1;
             // background-color: #eee;
@@ -581,7 +585,7 @@ section {
         margin: 0 auto;
         position: relative;
         width: 40px;
-        // height: 30px;
+        height: 30px;
         color: white;
 
         span {
@@ -591,18 +595,16 @@ section {
             height: 4px;
             background-color: #000;
 
-            :nth-of-type(1) {
+            &:nth-of-type(1) {
                 top: 0;
+            }
 
-                :nth-of-type(2) {
-                    top: 13px;
+            &:nth-of-type(2) {
+                top: 13px;
+            }
 
-                    :nth-of-type(3) {
-                        bottom: 0;
-
-                    }
-
-                }
+            &:nth-of-type(3) {
+                bottom: 0;
 
             }
 
@@ -659,7 +661,7 @@ section {
         margin: 0 auto;
         position: relative;
         width: 40px;
-        // height: 30px;
+        height: 30px;
 
         span {
             position: absolute;
@@ -668,19 +670,16 @@ section {
             height: 4px;
             background-color: #000;
 
-            :nth-of-type(1) {
+            &:nth-of-type(1) {
                 top: 0;
+            }
 
-                :nth-of-type(2) {
-                    top: 13px;
+            &:nth-of-type(2) {
+                top: 13px;
+            }
 
-                    :nth-of-type(3) {
-                        bottom: 0;
-
-                    }
-
-                }
-
+            &:nth-of-type(3) {
+                bottom: 0;
 
             }
 
