--- a/src/html/_layouts/_data/globalConfig.html
+++ b/src/html/_layouts/_data/globalConfig.html
@@ -22,7 +22,7 @@
             "type": "link",
             "class": "nav-registration"
         }, {
-            "label": "マイページ ログイン",
+            "label": "マイページ\nログイン",
             "type": "link",
             "class": "nav-login"
         }
