jsの動作修正や環境再構築、文章の全体構成編集等

--- a/src/sass/sougi.scss
+++ b/src/sass/sougi.scss
@@ -491,7 +491,7 @@ section {
 
             }
 
-            .content01-title {
+            .content-title {
                 margin-left: 10px;
                 font-size: 25px;
                 float: left;
@@ -522,12 +522,12 @@ section {
 
             }
 
-            .content02-title {
-                margin-left: 10px;
-                font-size: 25px;
-                float: left;
+            // .content02-title {
+            //     margin-left: 10px;
+            //     font-size: 25px;
+            //     float: left;
 
-            }
+            // }
 
 
 
@@ -775,14 +775,14 @@ section {
                     height: 15px;
                 }
 
-                .content01-title {
+                .content-title {
                     // order: 4;
                     font-size: 19px;
 
                 }
 
                 .content01-image {
-                    margin-bottom: 20px;
+                    margin-bottom: 80px;
                 }
 
                 .content02-little-box {
@@ -790,10 +790,10 @@ section {
                     height: 15px;
                 }
 
-                .content02-title {
-                    font-size: 19px;
+                // .content02-title {
+                //     font-size: 19px;
 
-                }
+                // }
 
             }
 
