[TOP] グロナビ修正

--- a/src/html/_layouts/_data/globalConfig.html
+++ b/src/html/_layouts/_data/globalConfig.html
@@ -24,7 +24,8 @@
         }, {
             "label": "マイページ\nログイン",
             "type": "link",
-            "class": "nav-login"
+            "class": "nav-login",
+            "url" : "/mypage/"
         }
     ],
     "footer1": [
