[マイページ] オンライン予約ページ追加

--- a/src/html/_layouts/_breadcrumb.html
+++ b/src/html/_layouts/_breadcrumb.html
@@ -1,4 +1,4 @@
-<nav class="breadcrumb" area-label="Breadcrumb">
+<nav class="breadcrumb">
   <ol>
     {% for item in breadcrumb_list %}
       <li>
