--- a/src/html/_layouts/_header.html
+++ b/src/html/_layouts/_header.html
@@ -1,4 +1,4 @@
-  <nav class="box-wrapper" role="navigation" aria-label="main navigation">
+  <nav class="box-wrapper" aria-label="main navigation">
     <div class="box-inner">
       <div class="header-logo">
           {% if (page.top == 'true') %}<h1>{% else %}<p>{% endif %}
@@ -24,8 +24,8 @@
       </div>
     </div>
   </nav>
-  <section class="header-concept box-wrapper" role="complementary" area-label="終活に関する不安、お悩みを専門家が無料でアドバイスします。">
+  <section class="header-concept box-wrapper" role="complementary">
     <div class="box-inner">
-      <p>終活に関する不安、お悩みを<br class="pc-none">専門家が無料でアドバイスします。<br class="pc-none"><span>まずは「節税簡単クイック診断」をチェック！</span></p>
+      <h3>終活に関する不安、お悩みを<br class="pc-none">専門家が無料でアドバイスします。<br class="pc-none"><span>まずは「節税簡単クイック診断」をチェック！</span></h3>
     </div>
   </section>
