--- a/src/html/_layouts/_sticky.html
+++ b/src/html/_layouts/_sticky.html
@@ -1,4 +1,4 @@
-<aside class="quick-diagnosis" role="banner">
+<aside class="quick-diagnosis">
   <a href="/#top-diagnosis-form">
     <p class="sp-none"><img src="/images/common/but-diagnosis.png" alt="資産の種類を選ぶだけでカンタンにおおよその納税準備金を確認できます"></p>
     <p class="pc-none"><img src="/images/common/but-diagnosis-sp.png" alt="資産の種類を選ぶだけでカンタンにおおよその納税準備金を確認できます"></p>
