--- a/src/html/_layouts/layout.html
+++ b/src/html/_layouts/layout.html
@@ -16,7 +16,7 @@
 
 <body id="body">
   <!-- header -->
-  <header class="header" header>
+  <header class="header">
     {% include '_header.html' %}
   </header>
   <!-- / header -->
@@ -28,13 +28,13 @@
   <!-- / main -->
 
   <!-- footer -->
-  <footer class="footer" role="contentinfo">
+  <footer class="footer">
     {% include '_footer.html' %}
   </footer>
   <!-- / footer -->
 
   <!-- 診断ボタン -->
-  <aside class="quick-diagnosis" role="banner">
+  <aside class="quick-diagnosis">
     {% include '_sticky.html' %}
   </aside>
   <!-- / 診断ボタン -->
