--- a/src/sass/_component/_form.scss
+++ b/src/sass/_component/_form.scss
@@ -153,6 +153,7 @@
   }
   /* ボタン系インプット */
   .form-control-button {
+    position: relative;
     input[type=submit], input[type=button], button, .button {
       width: 100%;
       text-align: center;
@@ -162,29 +163,30 @@
       border: none;
       @include font-size(24);
       padding: .75rem 0;
-      position: relative;
       outline-color: $color-green;
       box-sizing: border-box;
-      box-shadow: 0 1px 2px $color-dark-gray;
+      box-shadow: 0 1px 2px gray;
       .is_notTouchDevice &:hover, .is_notTouchDevice &:focus {
         background-color: $color-pink;
         outline-color: $color-pink;
       }
-      &::after {
-        content: "";
-        width: 0.75em;
-        height: 0.75em;
-        right: 10px;
-        top: 50%;
-        transform: translateY(-50%);
-        -webkit-transform: translateY(-50%);
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-image: url(/images/common/button-arrow01.png);
-        display: block;
-        position: absolute;
-      }
-      &.button-type2 {
+    }
+    &::after {
+      content: "";
+      width: 1rem;
+      height: 1rem;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      -webkit-transform: translateY(-50%);
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-image: url(/images/common/button-arrow01.png);
+      display: block;
+      position: absolute;
+    }
+    &.form-control-button-type2 {
+      input[type=submit], input[type=button], button, .button {
         color: $color-green;
         background-color: $color-gray;
         outline-color: $color-gray;
@@ -192,13 +194,15 @@
           background-color: $color-cream;
           outline-color: $color-cream;
         }
-        &::after {
-          left: 10px;
-          right: inherit;
-          background-image: url(/images/common/button-arrow02.png);
-        }
       }
-      &.button-type3 {
+      &::after {
+        left: 10px;
+        right: inherit;
+        background-image: url(/images/common/button-arrow02.png);
+      }
+    }
+    &.form-control-button-type3 {
+      input[type=submit], input[type=button], button, .button {
         background-color: $color-disabled;
         outline-color: $color-disabled;
         .is_notTouchDevice &:hover, .is_notTouchDevice &:focus {
@@ -207,7 +211,9 @@
           outline-color: $color-gray;
         }
       }
-      &.button-type4 {
+    }
+    &.form-control-button-type4 {
+      input[type=submit], input[type=button], button, .button {
         background-color: $color-pink;
         outline-color: $color-pink;
         .is_notTouchDevice &:hover, .is_notTouchDevice &:focus {
