--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -62,11 +62,6 @@
         text-align: right;
       }
     }
-    .form-control-button {
-      button {
-        box-shadow: 1px 2px 4px gray;
-      }
-    }
   }
 
   .top-section02-image {
@@ -475,10 +470,10 @@
       width: 100%;
       clear: both;
       .form-control-button {
-        input[type=submit], button {
-          width: 360px;
+        width: 360px;
+        margin: 0 auto;
+        .button {
           padding: .5em 0;
-          margin: 0 auto;
         }
       }
     }
