--- a/src/sass/mypage.scss
+++ b/src/sass/mypage.scss
@@ -42,6 +42,11 @@
           color: $color-white;
           background-color: $color-pink;
         }
+        a{
+            &:hover{
+            color: $color-pink;         
+          }
+        }
       }
     }
   }
