--- a/src/sass/sougi.scss
+++ b/src/sass/sougi.scss
@@ -2,6 +2,16 @@ section {
     display: flex;
     flex-direction: column;
 
+    button {
+        border-radius: 5px;
+        background-color: green;
+        padding: 5px;
+        text-align: center;
+        color: white;
+        margin-top: 30px;
+        width: 300px;
+    }
+
     .breadcrumbs {
         width: 980px;
         margin: 10px auto 0;
@@ -57,7 +67,7 @@ section {
             // background-color: #888;
             // color: #fff;
             margin-left: 8%;
-            margin-top: 15px;
+            margin-top: 40px;
             float: left;
 
             .local-nav-content01 {
@@ -460,12 +470,76 @@ section {
                 padding-top: 10px;
                 padding-bottom: 10px;
             }
+
+
+
+
+            .local-nav-content03-title {
+                color: orange;
+            }
+
+            .local-nav-content03-01 {
+                border: solid;
+                border-top: transparent;
+                border-left: transparent;
+                border-right: transparent;
+                /* 上辺・左辺・右辺が透明になる */
+                border-color: skyblue;
+                border-width: thin;
+                font-size: 21px;
+            }
+
+            .local-nav-content03-02 {
+                border: solid;
+                border-top: transparent;
+                border-left: transparent;
+                border-right: transparent;
+                /* 上辺・左辺・右辺が透明になる */
+                border-color: skyblue;
+                border-width: thin;
+                font-size: 21px;
+            }
+
+            .local-nav-content03-03 {
+                border: solid;
+                border-top: transparent;
+                border-left: transparent;
+                border-right: transparent;
+                /* 上辺・左辺・右辺が透明になる */
+                border-color: skyblue;
+                border-width: thin;
+
+                font-size: 21px;
+            }
+
+            .local-nav-content03-01 p {
+                width: 85%;
+                margin: 0 auto;
+                padding-top: 10px;
+                padding-bottom: 10px;
+            }
+
+            .local-nav-content03-02 p {
+                width: 85%;
+                margin: 0 auto;
+                padding-top: 10px;
+                padding-bottom: 10px;
+            }
+
+            .local-nav-content03-03 p {
+                width: 85%;
+                margin: 0 auto;
+                padding-top: 10px;
+                padding-bottom: 10px;
+            }
+
+
         }
 
 
 
         .content {
-            flex: 1;
+            // flex: 1;
             // background-color: #eee;
             text-align: center;
             margin-left: 5%;
@@ -473,10 +547,11 @@ section {
             // float: right;
             display: flex;
             flex-direction: column;
+            width: 70vw;
 
             .content-title-box {
-                margin-top: 20px;
-                margin-bottom: 80px;
+                margin-top: 60px;
+                margin-bottom: 20px;
 
             }
 
@@ -507,7 +582,7 @@ section {
             }
 
             .content01-image {
-                margin-bottom: 80px;
+                margin-bottom: 20px;
             }
 
 
@@ -558,16 +633,135 @@ section {
     /* スマホ対応 */
 
 
+
+
+
+
+
     // <<---- ハンバーガーメニュー ---->>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    .accordion ul {
+        width: 100%;
+        padding: 0;
+    }
+
+    .accordion li {
+        position: relative;
+        border-bottom: 1px solid white;
+        list-style: none;
+    }
+
+    .accordion li:first-child {
+        display: none;
+        border-top: 1px solid white;
+    }
+
+    .accordion>ul>li>a {
+        display: block;
+        text-decoration: none;
+        cursor: pointer;
+        padding: 1.5em 1em;
+        position: relative;
+    }
+
+    // .accordion>ul>li>a h5:hover {
+    //     // color: #111;
+    //     text-decoration: none;
+    // }
+
+    .accordion>ul>li>.local-nav-content01-01 {
+        display: none;
+        text-align: left;
+        padding: 0 .8em 1.4em 1em;
+        color: #555;
+        line-height: 1.8;
+
+
+        width: 85%;
+        margin: 0 auto;
+        padding-top: 10px;
+        padding-bottom: 10px;
+
+
+
+    }
+
+    .accordion li .accordion_icon,
+    .accordion li .accordion_icon span {
+        display: inline-block;
+        transition: all .3s;
+        box-sizing: border-box;
+    }
+
+    .accordion li .accordion_icon {
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        top: 20px;
+        right: 10px;
+    }
+
+    .accordion li .accordion_icon span {
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        background-color: white;
+    }
+
+    .accordion li .accordion_icon span:nth-of-type(1) {
+        transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+    }
+
+    .accordion li .accordion_icon span:nth-of-type(2) {
+        transform: rotate(90deg);
+        -webkit-transform: rotate(90deg);
+        -moz-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+        -o-transform: rotate(90deg);
+    }
+
+    .accordion li .accordion_icon.active span:nth-of-type(1) {
+        display: none;
+    }
+
+    .accordion li .accordion_icon.active span:nth-of-type(2) {
+        transform: rotate(180deg);
+        -webkit-transform: rotate(180deg);
+        -moz-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+        -o-transform: rotate(180deg);
+    }
+
+
+
+
+
+
+
     .head-bar01 {
-        // background: #ccc;
         box-sizing: border-box;
         height: 50px;
         padding: 10px 2.5%;
 
         a {
             text-align: left;
-            // float: left;
         }
     }
 
@@ -620,9 +814,7 @@ section {
             border-bottom: 1px solid #fff;
 
             a {
-                // background: #000;
                 box-sizing: border-box;
-                // color: #fff;
                 display: block;
                 font-size: 16px;
                 line-height: 26px;
@@ -641,7 +833,6 @@ section {
 
 
     .head-bar02 {
-        // background: #ccc;
         box-sizing: border-box;
         height: 50px;
         padding: 10px 2.5%;
@@ -696,9 +887,7 @@ section {
             border-bottom: 1px solid #fff;
 
             a {
-                // background: #000;
                 box-sizing: border-box;
-                // color: #fff;
                 display: block;
                 font-size: 16px;
                 line-height: 26px;
@@ -755,6 +944,10 @@ section {
                     margin: 0;
                 }
 
+                .local-nav-content03 {
+                    display: none;
+                }
+
             }
 
             .top-image02 {
@@ -764,6 +957,7 @@ section {
 
             .content {
                 clear: both;
+                width: 90vw;
 
                 .content-title-box {
                     margin-top: 60px;
@@ -811,12 +1005,23 @@ section {
 
 
     .top-image {
+        width: 1200px;
         text-align: center;
         margin-left: 7%;
     }
 
+    // .local-nav {
+    //     margin-top: 80px;
+    // }
+
+    // .content {
+    //     width: 200px;
+    // }
+
     .content-title-box {
         width: 50vw;
+        margin-top: 60px;
+        margin-bottom: 20px;
     }
 
     .top-image02 {
